# CODEREVIEW

./: README.md  pyproject.toml  requirements.txt
examples/: demo.py
src/codereview/: __init__.py  agent.py  cli.py  prompts.py  tools.py  web.py
